loader code added

--- a/login.html
+++ b/login.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <div class="login-container">
+  <div id="loader-container"></div>
+  <div class="login-container" style="display: none;">
     <div class="logo">
       <img src="static/logo.png" alt="Logo">
     </div>
@@ -28,6 +29,7 @@
       <a href="#">Forgot your password?</a>
     </div>
   </div>
+  <script src="public/js/loader.js"></script>
 </body>
 
 </html>
