loader text color change

--- a/loader.html
+++ b/loader.html
@@ -30,7 +30,7 @@
         .loader-text {
             font-size: 1.5rem;
             margin-top: 20px;
-            color: #6b7a65;
+            color: #fff;
             animation: fadeInOut;
         }
 
