--- a/loader.html
+++ b/loader.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loader</title>
-    <link rel="stylesheet" href="styles.css">
     <style>
-        /* body {
+        body {
             margin: 0;
             height: 100vh;
             display: flex;
@@ -15,10 +14,21 @@
             align-items: center;
             background-color: #f4f4f4;
             font-family: Arial, sans-serif;
-        } */
+        }
 
         .loader-container {
-            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            /* background-color: rgba(0, 0, 0, 0.8); */
+            /* Semi-transparent background */
+            z-index: 1000;
         }
 
         .loader-logo {
@@ -30,8 +40,8 @@
         .loader-text {
             font-size: 1.5rem;
             margin-top: 20px;
-            color: #fff;
-            animation: fadeInOut;
+            color: #2F4F4F;
+            animation: fadeInOut 4s infinite;
         }
 
         @keyframes fadeInOut {
@@ -54,7 +64,14 @@
         <div class="loader-text">The answers lie within you</div>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        // Optional JavaScript to hide loader after a delay
+        window.addEventListener('load', () => {
+            setTimeout(() => {
+                document.querySelector('.loader-container').style.display = 'none';
+            }, 5000); // Adjust the time as needed (e.g., 5000ms = 5 seconds)
+        });
+    </script>
 </body>
 
 </html>
