--- a/login.html
+++ b/login.html
@@ -6,15 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Page</title>
   <link rel="stylesheet" href="public/css/login.css">
+  <link rel="stylesheet" href="public/css/global.css">
 </head>
 
 <body>
   <div id="loader-container"></div>
-  <div class="login-container" style="display:none;">
+  <div class="login-container" class="animationFadein" style="display:none;">
     <div class="logo">
       <img src="static/logo.png" alt="Logo">
     </div>
-    <form class="login-form">
+    <form class="login-form" onsubmit="redirectToWelcome(event)">
       <div class="form-group">
         <label for="username">Username</label>
         <input type="text" id="username" name="username" placeholder="Enter your username" required>
@@ -23,13 +24,15 @@
         <label for="password">Password</label>
         <input type="password" id="password" name="password" placeholder="Enter your password" required>
       </div>
-      <button type="submit" class="login-btn">Login</button>
+      <button class="login-btn">Login</button>
     </form>
     <div class="forgot-password">
       <a href="#">Forgot your password?</a>
     </div>
   </div>
-  <script src="public/js/loader.js"></script>
+
 </body>
+<script src="public/js/loader.js"></script>
+<script src="public/js/login.js"></script>
 
 </html>
