Change animation from onboarding instructions

--- a/welcome.html
+++ b/welcome.html
@@ -15,8 +15,7 @@
     <div class="welcome-container" style="display:none;">
         <h1 class="onboarding-heading">Onboarding</h1>
         <div class="onboarding-subtext" id="welcome-text"></div>
-        <div class="onboarding-instruction">To proceed further, we need to onboard you by understanding you. Click start
-            when you're ready.</div>
+        <div class="onboarding-instruction"></div>
         <button class="start-btn" onclick="startApp()">Start</button>
     </div>
 </body>
