--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Page</title>
-  <link rel="stylesheet" href="public/css/login.css">
+  <link rel="stylesheet" href="public/css/index.css">
   <link rel="stylesheet" href="public/css/global.css">
 </head>
 
@@ -33,6 +33,6 @@
 
 </body>
 <script src="public/js/loader.js"></script>
-<script src="public/js/login.js"></script>
+<script src="public/js/index.js"></script>
 
 </html>
