--- a/public/welcome.html
+++ b/public/welcome.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
-    <link rel="stylesheet" href="public/css/login.css">
-    <link rel="stylesheet" href="public/css/global.css">
-    <link rel="stylesheet" href="public/css/welcome.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/welcome.css">
 </head>
 
 <body>
@@ -19,6 +19,6 @@
         <button class="start-btn" onclick="startApp()">Start</button>
     </div>
 </body>
-<script src="public/js/welcome.js"></script>
+<script src="js/welcome.js"></script>
 
 </html>
