--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Login Page</title>
   <link rel="stylesheet" href="public/css/index.css">
   <link rel="stylesheet" href="public/css/global.css">
+  <!-- add icon link -->
+  <link rel="icon" href="static/logo.png" type="image/x-icon" />
 </head>
 
 <body>
