--- a/public/welcome.html
+++ b/public/welcome.html
@@ -30,6 +30,7 @@
         <div>
             <button id="stopButton" onclick="stopRecording()">Stop</button>
         </div>
+        <canvas id="waveform"></canvas>
     </div>
 </body>
 <script src="js/welcome.js"></script>
@@ -241,6 +242,7 @@
             await peerConnection.setRemoteDescription(answer);
 
             updateStatus('Connected');
+            startMic();
 
 
             // window.location.href = '/public/audioVisualizer.html';
@@ -289,6 +291,74 @@
 
     function hideError() {
         errorDiv.style.display = 'none';
+    }
+
+    let audioContext, analyser, microphone, dataArray, canvas, canvasCtx;
+
+    function startMic() {
+
+        navigator.mediaDevices.getUserMedia({ audio: true })
+            .then(stream => {
+                audioContext = new (window.AudioContext || window.webkitAudioContext)();
+                analyser = audioContext.createAnalyser();
+                microphone = audioContext.createMediaStreamSource(stream);
+                microphone.connect(analyser);
+                analyser.fftSize = 512;
+
+                const bufferLength = analyser.frequencyBinCount;
+                dataArray = new Uint8Array(bufferLength);
+
+                canvas = document.getElementById("waveform");
+                canvasCtx = canvas.getContext("2d");
+                // canvas.width = canvas.clientWidth;
+                // canvas.height = canvas.clientHeight;
+                const container = document.getElementById("audioVisualizer");
+
+                // Ensure the container is visible before setting canvas size
+                if (window.getComputedStyle(container).display === "block") {
+                    container.style.display = "block"; // Make it visible
+
+                    setTimeout(() => {
+                        canvas.width = canvas.clientWidth || 800;
+                        canvas.height = canvas.clientHeight || 300;
+                    }, 100); // Delay to allow layout update
+                } else {
+                    canvas.width = canvas.clientWidth || 800;
+                    canvas.height = canvas.clientHeight || 300;
+                }
+                drawWave();
+            })
+            .catch(error => console.error("Microphone access denied:", error));
+    }
+
+    function drawWave() {
+        requestAnimationFrame(drawWave);
+        analyser.getByteTimeDomainData(dataArray);
+
+        canvasCtx.fillStyle = "black";
+        canvasCtx.fillRect(0, 0, canvas.width, canvas.height);
+
+        canvasCtx.lineWidth = 2;
+        canvasCtx.strokeStyle = "limegreen";
+        canvasCtx.beginPath();
+
+        let sliceWidth = canvas.width / dataArray.length;
+        let x = 0;
+
+        for (let i = 0; i < dataArray.length; i++) {
+            let v = dataArray[i] / 128.0;
+            let y = v * canvas.height / 2;
+
+            if (i === 0) {
+                canvasCtx.moveTo(x, y);
+            } else {
+                canvasCtx.lineTo(x, y);
+            }
+            x += sliceWidth;
+        }
+
+        canvasCtx.lineTo(canvas.width, canvas.height / 2);
+        canvasCtx.stroke();
     }
 </script>
 
