bg change of visualizer

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -335,7 +335,7 @@
         requestAnimationFrame(drawWave);
         analyser.getByteTimeDomainData(dataArray);
 
-        canvasCtx.fillStyle = "black";
+        canvasCtx.fillStyle = "#f4f4f4";
         canvasCtx.fillRect(0, 0, canvas.width, canvas.height);
 
         canvasCtx.lineWidth = 2;
