change server wave color

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -420,7 +420,7 @@ function drawWaveServer() {
     canvasCtxServer.fillRect(0, 0, canvasServer.width, canvasServer.height);
 
     canvasCtxServer.lineWidth = 2;
-    canvasCtxServer.strokeStyle = "cyan";
+    canvasCtxServer.strokeStyle = "#90A489";
     canvasCtxServer.beginPath();
 
     let sliceWidth = canvasServer.width / dataArrayServer.length;
