--- a/public/welcome.html
+++ b/public/welcome.html
@@ -35,7 +35,7 @@
         <div class="waves-container">
             <svg viewBox="0 0 500 200" preserveAspectRatio="none">
                 <path id="wavePath" d="M0 100 Q 50 100, 100 100 T 200 100 T 300 100 T 400 100 T 500 100 V200 H0 Z"
-                    fill="#f4f4f4" />
+                    />
             </svg>
         </div>
     </div>
@@ -436,7 +436,8 @@
         gsap.to("#wavePath", {
             attr: { d: pathData },
             duration: 0.05,
-            ease: "none"
+            ease: "none",
+            fill: "#90a489"
         });
     }
 
